# my-project1

./: pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
gspread_pkg/: .gitignore  main.py  my-project.json  requirements.txt  test_main.py
gspread_pkg/.github/workflows/: python-app.yml
